backend & frontend code added v1 interative prototype updated architecture updated
